build/log/idf_py_stdout_output_17768
[1/11] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\PMLS\Documents\Projects\WMS\WMS_ESPIDF\water-management\build\bootloader\esp-idf\esptool_py && C:\Users\PMLS\.espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/Users/PMLS/esp/v5.4/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/PMLS/Documents/Projects/WMS/WMS_ESPIDF/water-management/build/bootloader/bootloader.bin"
Bootloader binary size 0x6560 bytes. 0xaa0 bytes (9%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/lcd_i2c.c.obj
FAILED: esp-idf/src/CMakeFiles/__idf_src.dir/lcd_i2c.c.obj 
ccache C:\Users\PMLS\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/PMLS/Documents/Projects/WMS/WMS_ESPIDF/water-management/build/config -IC:/Users/PMLS/Documents/Projects/WMS/WMS_ESPIDF/water-management/src -IC:/Users/PMLS/Documents/Projects/WMS/WMS_ESPIDF/water-management/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/newlib/platform_include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/freertos/config/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/freertos/config/include/freertos -IC:/Users/PMLS/esp/v5.4/esp-idf/components/freertos/config/xtensa/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/PMLS/esp/v5.4/esp-idf/components/freertos/esp_additions/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_hw_support/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_hw_support/include/soc -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_hw_support/dma/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/heap/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/heap/tlsf -IC:/Users/PMLS/esp/v5.4/esp-idf/components/log/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/soc/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/soc/esp32 -IC:/Users/PMLS/esp/v5.4/esp-idf/components/soc/esp32/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/soc/esp32/register -IC:/Users/PMLS/esp/v5.4/esp-idf/components/hal/platform_port/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/hal/esp32/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/hal/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_rom/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_rom/esp32/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_rom/esp32 -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_common/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_system/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_system/port/soc -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_system/port/include/private -IC:/Users/PMLS/esp/v5.4/esp-idf/components/xtensa/esp32/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/xtensa/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/xtensa/deprecated_include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/lwip/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/lwip/include/apps -IC:/Users/PMLS/esp/v5.4/esp-idf/components/lwip/include/apps/sntp -IC:/Users/PMLS/esp/v5.4/esp-idf/components/lwip/lwip/src/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/lwip/port/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/lwip/port/freertos/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/PMLS/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/PMLS/esp/v5.4/esp-idf/components/driver/deprecated -IC:/Users/PMLS/esp/v5.4/esp-idf/components/driver/i2c/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/driver/touch_sensor/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/driver/twai/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/driver/touch_sensor/esp32/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_pm/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_ringbuf/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_gpio/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_pcnt/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_gptimer/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_spi/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_i2s/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/sdmmc/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_sdspi/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_sdio/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_dac/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_rmt/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_tsens/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_sdm/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_i2c/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_uart/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/vfs/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_ledc/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_parlio/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_wifi/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_wifi/include/local -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_wifi/wifi_apps/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_event/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_phy/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_phy/esp32/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_netif/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/nvs_flash/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_partition/include -IC:/Users/PMLS/esp/v5.4/esp-idf/components/esp_http_client/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/PMLS/Documents/Projects/WMS/WMS_ESPIDF/water-management=. -fmacro-prefix-map=C:/Users/PMLS/esp/v5.4/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/src/CMakeFiles/__idf_src.dir/lcd_i2c.c.obj -MF esp-idf\src\CMakeFiles\__idf_src.dir\lcd_i2c.c.obj.d -o esp-idf/src/CMakeFiles/__idf_src.dir/lcd_i2c.c.obj -c C:/Users/PMLS/Documents/Projects/WMS/WMS_ESPIDF/water-management/src/lcd_i2c.c
C:/Users/PMLS/Documents/Projects/WMS/WMS_ESPIDF/water-management/src/lcd_i2c.c:3:9: error: redefinition of 'BL'
    3 | uint8_t BL = 0;
      |         ^~
In file included from C:/Users/PMLS/Documents/Projects/WMS/WMS_ESPIDF/water-management/src/lcd_i2c.c:1:
C:/Users/PMLS/Documents/Projects/WMS/WMS_ESPIDF/water-management/include/lcd_i2c.h:12:9: note: previous definition of 'BL' with type 'uint8_t' {aka 'unsigned char'}
   12 | uint8_t BL = 0;   // P3 (modifiable, backlight control)
      |         ^~
[5/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/water-management.c.obj
ninja: build stopped: subcommand failed.
